--- a/rtsp_viewer/Dockerfile
+++ b/rtsp_viewer/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR /app
 COPY . .
 RUN rm -rf node_modules
 RUN npm install -f
+EXPOSE 5173
 
-CMD ["npm","run","dev"]
+CMD ["npm","run","dev","--host", "0.0.0.0"]
