--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,12 @@ services:
     ports:
       - "7123:7123"
       - "4123:4123"
-  rtsp_viewer:
-  	image: rtsp_viewer
-  	ports:
-  	- "5173":"5173"
+  canvas_handler:
+     image: canvas_handler
+     ports:
+      - "7000:7000"
   mongodb:
     image: mongo:6-jammy
     ports:
       - '27017:27017'
-    volumes:
-      - dbdata6:/data/db
-    networks:
-      - node-network
 
-volumes:
-  dbdata6:
-
-networks:
-  node-network:
-    driver: bridge
